Feat: Landing Page cont.

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -14,8 +14,13 @@
   }
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: var(--font-poppins);
+  
 }
