Light/Dark Theme

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -9,13 +9,14 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ededed;
+    --foreground: #171717;
   }
 }
 
 html{
   scroll-behavior: smooth;
+  list-style: none;
 }
 
 body {
