Teste de pagamento.

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -7,7 +7,7 @@
   --background-color: #f0f2f5; /* Slightly darker light background */
   --text-color: #343435;
   --card-color: #ffffff;
-  --card-light-color: #f8f8f8; /* A lighter shade for elements within cards */
+  --card-light-color: #ebebeb; /* A lighter shade for elements within cards */
 }
 
 /* Dark Theme Variables */
